--- a/semana11jueves/second_app/app/views/students/index.html.erb
+++ b/semana11jueves/second_app/app/views/students/index.html.erb
@@ -2,23 +2,23 @@
 
 <h1>Students</h1>
 
-<table>
+<table class="table">
   <thead>
-    <tr>
-      <th>Name</th>
-      <th>Age</th>
-      <th colspan="3"></th>
+    <tr class="row">
+      <th class="column">Name</th>
+      <th class="column">Age</th>
+      <th class="column" colspan="3">Acciones</th>
     </tr>
   </thead>
 
   <tbody>
     <% @students.each do |student| %>
-      <tr>
-        <td><%= student.name %></td>
-        <td><%= student.age %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <tr class="row">
+        <td class="column"><%= student.name %></td>
+        <td class="column"><%= student.age %></td>
+        <td class="column"><%= link_to 'Show', student , class: 'btn btn-primary' %></td>
+        <td class="column"><%= link_to 'Edit', edit_student_path(student)  , class: 'btn btn-success'%></td>
+        <td class="column"><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-warning'%></td>
       </tr>
     <% end %>
   </tbody>
