--- a/semana11jueves/second_app/app/views/layouts/_navbar.html.erb
+++ b/semana11jueves/second_app/app/views/layouts/_navbar.html.erb
@@ -4,10 +4,10 @@
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Index</a>
+        <%= link_to 'Landing', pages_landing_path , class: 'nav-link' %>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Landing</a>
+        <%= link_to 'Index', students_path , class: 'nav-link' %>
       </li>
     </ul>
   </div>
