--- a/semana11jueves/second_app/app/views/pages/landing.html.erb
+++ b/semana11jueves/second_app/app/views/pages/landing.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Students con Index</h1>
+<h1>Students en el Landing</h1>
 
 <table class="table">
   <thead>
@@ -23,7 +23,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Student', new_student_path %>
